--- a/templates/thread.html
+++ b/templates/thread.html
@@ -22,7 +22,13 @@
         <div class="card-body">
             <h5 class="card-title">{{.Title}}</h5>
             <p class="card-text">{{.Content}}</p>
-            <a href="/threads/{{$.Thread.ID}}/{{.ID}}">X comments</a>
+            <a href="/threads/{{$.Thread.ID}}/{{.ID}}">
+                {{ if eq .CommentsCount 1}}
+                    {{.CommentsCount }} comment
+                {{ else }}
+                    {{.CommentsCount }} comments
+                {{ end }}
+            </a>
         </div>
     </div>
 </div>
